overflow fixed

--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ html {
   background-color: var(--color-bg);
   width: 100%;
   height: 100%; 
+  overflow: hidden;
 }
 
 /* navbar */
